changed package name; modified design.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TestTask_01</string>
+    <string name="app_name">ABC Top Stories</string>
 
     <string name="url_to_feed">http://abcnews.go.com/abcnews/topstories</string>
 </resources>
